--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,6 +2,9 @@
 @import "home.scss";
 @import "fonts.scss";
 @import "adoption.scss";
+@import "contact.scss";
+@import "events.scss";
+@import "login.scss";
 
 //Variables//
 $siteBlue: #4db1ea;
@@ -122,7 +125,6 @@ nav {
   }
 }
 
-//definitly not stolen nav styling//
 
 //Footer Styling
 .footer {
