--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -26,3 +26,8 @@
     src: url(../css/fonts/poppins/Poppins-Regular.ttf);
 }
 
+@font-face {
+    font-family: poppinsBold;
+    src: url(../css/fonts/poppins/Poppins-SemiBold.ttf);
+}
+
