--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -47,13 +47,15 @@
       font-family: poppinsReg;
       margin-bottom: 20px;
       height: 25px;
+      padding-left: 5px;
+      font-size: 18px;
     }
     select {
       padding-top: -20px;
       min-width: 250px;
       margin-bottom: 20px;
       height: 25px;
-      font-size: 20px;
+      font-size: 18px;
       option {
         font-size: 18px;
       }
@@ -62,12 +64,14 @@
       margin-bottom: 20px;
       width: 100%;
       font-family: poppinsReg;
-      font-size: 20px;
+      font-size: 18px;
+      padding-left: 5px;
     }
     .captcha {
       display: flex;
       align-items: center;
       justify-content: space-evenly;
+      margin-top: 20px;
     }
     .row {
       display: flex;
@@ -77,7 +81,7 @@
     }
     .button {
       margin-top: 60px;
-      margin-bottom: 50px;
+      margin-bottom: 30px;
       font-family: poppinsReg;
       display: flex;
       align-items: center;
@@ -102,11 +106,14 @@
 //Contact Page MQ//
 @media (max-width: 1200px) {
   .contact {
+    .header{
+      display: none;
+    }
     flex-direction: column;
     .form {
         width: 80%;
         margin:0 auto;
-        margin-top: 80px;
+        margin-top: 30px;
         margin-bottom: 50px;
     }
   }
