--- a/css/styles.css
+++ b/css/styles.css
@@ -30,28 +30,32 @@
 
 .rotd {
   background-color: white;
+  min-width: 700px;
   width: 60%;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 50px;
   border: 2px solid #0069a5;
+  margin-bottom: 50px;
   border-radius: 25px;
 }
 .rotd .text {
-  width: 45%;
   padding: 20px;
+  background-color: white;
+  margin-left: 20px;
+  border-radius: 25px;
 }
 .rotd .text h3 {
   margin-bottom: 100px;
 }
 .rotd .rabbitPic {
   padding-top: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 25px;
   padding-right: 20px;
 }
 .rotd .rabbitPic img {
+  width: 250px;
   border-radius: 25px;
 }
 .rotd h3 {
@@ -212,13 +216,6 @@
 }
 
 @media (max-width: 1200px) {
-  .rotd {
-    flex-direction: column;
-    width: 80%;
-  }
-  .rotd .text {
-    width: 90%;
-  }
   .threeBoxes {
     flex-direction: column;
   }
@@ -795,6 +792,7 @@
 }
 .events .calendar .week .day ul li a:hover {
   text-decoration: underline;
+  color: #4db1ea;
 }
 .events .calendar .week .empty {
   background-color: #4db1ea;
