--- a/scss/events.scss
+++ b/scss/events.scss
@@ -56,6 +56,7 @@
             }
             a:hover {
               text-decoration: underline;
+              color: $siteBlue;
             }
           }
         }
