--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,6 +5,11 @@
 @import "contact.scss";
 @import "events.scss";
 @import "login.scss";
+@import "membership.scss";
+@import "volunteer.scss";
+
+
+
 
 //Variables//
 $siteBlue: #4db1ea;
