--- a/scss/resources.scss
+++ b/scss/resources.scss
@@ -50,3 +50,55 @@
         margin-bottom: 30px;
     }
 }
+
+.faq{
+  h1{
+    margin-top: 50px;
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
+  
+  .jumpTo{
+    li{
+      font-family: poppinsReg;
+      margin-left: 25px;
+      color: white;
+      margin-top: 10px;
+      a{
+        text-decoration: none;
+        color: $siteBlue;
+        font-size: 18px;
+      }
+      a:hover{
+        text-decoration: underline;
+      }
+    }
+  }
+  width: 80%;
+  margin: 0 auto;
+  p{
+    font-family: poppinsReg;
+    margin-bottom: 10px;
+  }
+  h2{
+    color: $siteDarkBlue;
+    font-family: robotoSlab;
+  }
+  h3{
+    font-family: poppinsReg;
+    color: $siteBlue;
+  }
+  .section{
+    margin-bottom: 25px;
+    margin-top: 25px;
+    ul{
+      margin-left: 25px;
+      font-family: poppinsReg;
+      margin-bottom: 10px;
+      li{
+        margin-top: 5px;
+        margin-bottom: 5px;
+      }
+    }
+  }
+}
