--- a/scss/home.scss
+++ b/scss/home.scss
@@ -235,7 +235,7 @@ $siteDarkBlue: #0069a5;
     }
   }
   .logo {
-    background-image: url(../css/rabbitAssets/icons/EvLogoDesign.png);
+    background-image: url(css/rabbitAssets/icons/evLogoDesign.png);
     height: 400px;
     width: 400px;
     background-size: contain;
